# quant-strategy-manager

./: .env.logging.example  .gitignore  ARCHITECTURE_REFACTOR.md  IMPLEMENTATION_SUMMARY.md  LOGGING_CONFIGURATION.md  MULTI_BACKEND_LOGGING.md  README.md  STRATEGY_REGISTRY.md  api_server.py  init_env.sh  pyproject.toml  requirements-api.txt  simple_auth.py  start_api_server.sh  test_config_loader.py
config/: .env.example  .gitignore  production.json
docs/: LOG_STREAMING_GUIDE.md
examples/: api_with_log_streaming.py  dashboard.html  diagnose_websocket.sh  log_viewer.html  quickcheck_websocket.sh  test_log_streaming.py  vnpy_example.py
scripts/: migrate_remove_engine_class.py
src/strategy_manager/: __init__.py  cli.py  config_loader.py  log_config.py  log_handlers.py  log_stream_server.py  strategy_registry.py
src/strategy_manager/adapters/: __init__.py  vnpy_adapter.py
src/strategy_manager/core/: __init__.py  lifecycle_manager.py  multi_strategy_orchestrator.py  strategy_worker.py  trading_scheduler.py
systemd/: README.md  worker-api.service
