[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-strategy-manager"
version = "0.1.0"
description = "Engine-agnostic strategy orchestration library for quantitative trading"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Shuyong Lin", email = "steven.linsy@gmail.com"}
]
keywords = ["trading", "quantitative", "strategy", "backtrader", "vnpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pymongo>=4.0.0",
    "python-dateutil>=2.8.0",
    "websockets>=12.0",  # LogStreamServer 需要
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "ruff>=0.11.0",
    "mypy>=0.990",
]

# API 服务器依赖（需要在 vnpy 环境中运行）
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # 注意：还需要手动安装 vnpy 及其依赖（见 vnpy-live-trading）
]

# vnpy 引擎适配器（在 vnpy 环境中已安装）
vnpy = [
    # vnpy 及其所有依赖应该在 vnpy-live-trading/.venv 中安装
    # 本项目通过环境隔离使用，不直接声明版本依赖
]

# backtrader 引擎适配器（用户自行安装）
backtrader = [
    # backtrader 应该在使用它的环境中单独安装
    # 本项目提供适配器，但不强制依赖特定版本
]

# 所有可选依赖（仅包含 API 服务器相关）
all = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/blue_energy/quant-strategy-manager"
Repository = "https://github.com/blue_energy/quant-strategy-manager"
Documentation = "https://quant-strategy-manager.readthedocs.io"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
